# cavestory-clone

./: CMakeLists.txt  README.md
headers/: animatedsprite.h  game.h  globals.h  graphics.h  input.h  level.h  player.h  sprite.h
src/: animatedsprite.cpp  game.cpp  graphics.cpp  input.cpp  level.cpp  main.cpp  player.cpp  sprite.cpp
